# leafjots

./: .env.example  .gitignore  CLAUDE.md  README.md  TECHNICAL.md  alembic.ini  docker-compose.yml  pyproject.toml  render.yaml  requirements.txt
.planning/: PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md
.planning/research/: ARCHITECTURE.md  FEATURES.md  PITFALLS.md  STACK.md  SUMMARY.md
alembic/: env.py
alembic/versions/: 0964d9636ae2_initial_phase1_tables.py  6080bbca93a1_phase5_to_9_complete.py  9d62205851e4_phase12_taxable_transfers.py  phase2_add_last_synced_at.py  phase3_extend_transactions.py  phase4_indexes.py  v2_001_add_diagnostic_data.py  v3_001_csv_import_tables.py
docs/: chuan-bi-gap-kiem-toan.md  leafjots-overview-global.md  leafjots-overview-vietnam.md
docs/reference/: Business_Logic.md  Data_Model.md  Enums_Reference.md  Infrastructure_Patterns.md  Parser_Patterns.md  Parser_Utilities.md
scripts/: e2e_seed_entities.py  e2e_test.py  run_dripgroup.py  seed_entities.py
src/cryptotax/: config.py  container.py  exceptions.py
tests/: conftest.py
tests/fixtures/: aave_supply.json  curve_exchange.json  eth_transfer.json  swap.json  uniswap_swap.json
tests/integration/: test_bookkeeper.py  test_cex_wallet_db.py  test_multichain_db.py  test_parse_api.py  test_protocol_parse.py  test_reports_api.py  test_tax_api.py  test_transactions_api.py  test_wallets_api.py
tests/unit/: test_binance_csv_extended.py  test_binance_csv_parser.py  test_csv_import.py  (+5 more)
web/: .env.example  index.html  package-lock.json  package.json  vite.config.ts
(+231 files in other folders)
