[project]
name = "leafjots"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.34",
    "sqlalchemy[asyncio]>=2.0",
    "asyncpg>=0.30",
    "alembic>=1.14",
    "pydantic>=2.10",
    "pydantic-settings>=2.7",
    "dependency-injector>=4.43",
    "web3>=7.6",
    "celery[redis]>=5.4",
    "redis>=5.2",
    "httpx>=0.28",
    "tenacity>=9.0",
    "openpyxl>=3.1",
    "cryptography>=43.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "pytest-cov>=6.0",
    "aiosqlite>=0.20",
    "ruff>=0.9",
    "mypy>=1.14",
]

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
